# venue-inter

./: .env.example  .gitignore  Cargo.toml  Dockerfile  PASSKEY_SETUP_OPTIONS.md  README.md  TO_VERIFY.md  docker-compose.yml  queries.yaml
authentik-blueprints/: venue-inter-oauth2.yaml  venue-inter-passkeys.yaml
crates/app/: Cargo.toml  Dioxus.toml
crates/app/src/: main.rs
crates/app/src/components/: mod.rs  modal.rs  toast.rs
crates/app/src/routes/: games.rs  mod.rs  person_schedules.rs  tasks.rs  tickets.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  audit.rs  db.rs  documents.rs  email.rs  lib.rs  reviews.rs  sync.rs  task_runner.rs  tasks.rs  tickets.rs
crates/server/src/auth/: middleware.rs  routes.rs  types.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: models.rs
docs/: dev-setup.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  toast.svelte.ts  types.ts
frontend/src/lib/components/: NavBar.svelte  Toast.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/data/: +page.svelte
frontend/src/routes/data/[slug]/: +page.svelte
frontend/src/routes/data/[slug]/[id]/: +page.svelte
frontend/src/routes/pools/: +page.svelte
frontend/src/routes/pools/fix-show-codes/: +page.svelte
frontend/src/routes/pools/lockouts/: +page.svelte
frontend/src/routes/pools/reset-questionnaire/: +page.svelte
frontend/src/routes/reports/: +page.svelte
frontend/src/routes/reviews/: +page.svelte
frontend/src/routes/reviews/ceo/: +page.svelte
frontend/src/routes/reviews/ceo/[part_key]/: +page.svelte
frontend/src/routes/reviews/disqualify/: +page.svelte
frontend/src/routes/reviews/disqualify/[part_key]/: +page.svelte
frontend/src/routes/reviews/excuse/: +page.svelte
frontend/src/routes/reviews/excuse/[part_key]/: +page.svelte
frontend/src/routes/reviews/queue/: +page.svelte  +page.ts
frontend/src/routes/reviews/records/[part_no]/: +page.svelte
frontend/src/routes/reviews/report/: +page.svelte
frontend/src/routes/reviews/sync/: +page.svelte
frontend/src/routes/tasks/: +page.svelte
frontend/tests/: data-browser.test.ts  helpers.ts  reviews.test.ts  smoke.test.ts
ifx-config/: odbc-docker.ini  odbc.ini  odbcinst.ini  seed.sql  setup.sh  sqlhosts  sqlhosts-docker
migration/: 01-foundation.md  02-dashboard.md  03-pools.md  04-questionnaires.md  05-reviews.md  06-reports.md  07-background-processing.md  08-testing-strategy.md  PLAN.md
migrations/: init.sql
