[workspace]
members = ["crates/shared-types", "crates/server", "crates/app"]
resolver = "2"

[workspace.dependencies]
dioxus = { version = "0.7", features = ["router", "fullstack"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
openidconnect = "4.0"
tower-sessions = "0.15"
time = "0.3"
odbc-api = { version = "8", features = ["narrow"] }
tower-http = { version = "0.6", features = ["trace", "set-header", "request-id"] }
tower-sessions-sqlx-store = "0.14"
tower_governor = { version = "0.4", features = ["axum"] }
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
serde_yaml = "0.9"
