[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared-types = { path = "../shared-types" }

# Server-only dependencies
server = { path = "../server", optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower-sessions = { workspace = true, optional = true }
time = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
openidconnect = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
tower-sessions-sqlx-store = { workspace = true, optional = true }
tower_governor = { workspace = true, optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

[features]
default = []
web = ["dioxus/web", "dep:gloo-timers"]
server = [
    "dioxus/server",
    "dep:server",
    "dep:axum",
    "dep:tokio",
    "dep:tower-sessions",
    "dep:time",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:dotenvy",
    "dep:anyhow",
    "dep:reqwest",
    "dep:openidconnect",
    "dep:sqlx",
    "dep:uuid",
    "dep:tower-sessions-sqlx-store",
    "dep:tower_governor",
]
