[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-types = { path = "../shared-types" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# Server-only dependencies (always on for this crate — feature-gating
# happens at the app crate level via cfg(feature = "server"))
axum = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
openidconnect = { workspace = true }
tower-sessions = { workspace = true }
time = { workspace = true }
odbc-api = { workspace = true }
tower-http = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
lettre = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
tower_governor = { workspace = true }
serde_yaml = { workspace = true }
